# MangoSSH

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  THIRD_PARTY_NOTICES.md  gradle.properties  settings.gradle.kts
.github/workflows/: android-ci.yml  android-release.yml
app/: build.gradle.kts
app/src/androidTest/java/website/sung/mangossh/: MangoSshInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mosh_pty_bridge.cpp
app/src/main/java/website/sung/mangossh/: MainActivity.kt
app/src/main/java/website/sung/mangossh/core/: MangoLog.kt
app/src/main/java/website/sung/mangossh/domain/: ConnectionProfile.kt
app/src/main/java/website/sung/mangossh/presentation/: MangoSshApp.kt  MangoSshViewModel.kt  MangoUiLiteralLocalization.kt  TerminalSessionScreen.kt
app/src/main/java/website/sung/mangossh/security/: AppLockStore.kt
app/src/main/java/website/sung/mangossh/session/: MoshBootstrap.kt  MoshPtyProcess.kt  SessionForegroundService.kt  SessionModels.kt  SshSessionController.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tools/: build-mosh-android-wsl.sh  build-pty-bridge-wsl.sh  check-16kb-elf-wsl.sh  check-mosh-build-host.sh  fetch-android-ndk-wsl.sh  install-mosh-assets.sh
(+16 files in other folders)
